<resources>
    <string name="app_name">NewsMeme</string>
    <string name="action_settings">Settings</string>
    <string name="YT_API_KEY">AIzaSyC4akYK9TEQUCYJPFcyOA8LK4pc3gigu9k</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_icon">navigation_drawer_icon</string>
    <string name="title_activity_splash">Splash</string>
    <string name="GoToFirst">GoToFirstFragmentButton</string>
    <string name="title">Choose news\' languages</string>
    <string-array name="nav_drawer_enteries">
        <item>About us</item>
        <item>BlahBlahBlah</item>
        <item>Like us on Facebook!</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string name="ENGLISH">en</string>
    <string name="HINDI">hi</string>
    <string name="FILENAME">lang_preference_file</string>
    <string name="runCheckFile">run_check_file</string>
    <string name="checkingRunTimes">1</string>
    <string name="doneCheckingRunTimes">0</string>
    <string name="objEN">IRRyWNL7T4</string>
    <string name="objHI">9Ay184Dxit</string>
    <string name="storeEnObjFile">store_english_object_file</string>
    <string name="storeHiObjFile">store_hindi_object_file</string>
    <string name="content_refresh">for_content_refreshal</string>
    <string name="emailID">gautam@arseniclabs.com</string>
    <string name="emailSubject">Android App Feedback</string>
    <string name="narratorName_By_Text">by</string>

    <string name="FACEBOOK_APP_ID">916899568429260</string>

    <string name="hello_world">Hello world!</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title_activity_couch_view">CouchViewActivity</string>
    <string name="fetch_error">Couldn\'t fetch data</string>
    <string name="network_error">Preference switching needs network connection</string>
    <string name="network_suggestion">Please connect to a network</string>
    <string name="share_app_link" />
    <string name="youtube_subscribe">https://www.youtube.com/user/Mr9vine</string>
    <string name="youtube_app_not_found">Please install YouTube app</string>
    <string name="my_email">gautamprajapati06@gmail.com</string>
    <string name="gmail_not_found">Gmail client not available</string>
    <string name="update_pref_dialogue">Updating preferences</string>
    <string name="pref_connection_suggestion">Preference switching needs network connection</string>
    <string name="app_not_installed">App not installed</string>
    <string name="storage_permission">Please provide Storage permission</string>
    <string name="whatsapp_share_text">"NewsMeme:Video News - the best way to stay updated\nGet today on Play Store https://goo.gl/gNcPbj "</string>
    <string name="refresh_dialogue">Refreshing</string>
    <string name="check_out">"Hey! You must check this out!: "</string>
    <string name="facebooksharebutton">facebookShareButton</string>
    <string name="facebookmessengersharebutton">facebookMessengerShareButton</string>
    <string name="twittersharebutton">twitterShareButton</string>
    <string name="whatsappsharebutton">whatsappShareButton</string>
    <string name="sharebutton">shareButton</string>
    <string name="splashscreenimageview">SplashScreenImageView</string>
    <string name="_40_sec_800kb_quality_journalism">40 sec ★ 800Kb ★ Quality Journalism</string>
    <string name="newsmeme">NewsMeme</string>
    <string name="youtube_player">Youtube Player</string>
    <string name="offlineimageviewimage">OfflineImageViewImage</string>
    <string name="news_title">News Title</string>
    <string name="news_content">News Content</string>
    <string name="menufragmentimageview">MenuFragmentImageView</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="couch_view">Couch View</string>
    <string name="couch_view_button">Couch View Button</string>
    <string name="hindi_button">Hindi Button</string>
    <string name="subscribe_to_youtube">Subscribe to YouTube</string>
    <string name="like_on_facebook">Like on Facebook</string>
    <string name="share_app">Share app</string>
    <string name="feedback_bhejo">Feedback Bhejo</string>
    <string name="feedback_button">Feedback Button</string>
    <string name="share_app_button">Share App button</string>
    <string name="like_on_facebook_button">Like on Facebook button</string>
    <string name="subscribe_to_youtube_button">Subscribe to Youtube Button</string>
    <string name="video_web_view">Video Web View</string>
    <string name="play_video_in_full_screen_button">Play video in full screen button</string>
    <string name="gofullscreenbutton">GoFullScreenButton</string>
    <string name="app_icon">App icon</string>
    <string name="widget_news_title_description">News Title</string>
    <string name="news_title_list">News Title List</string>
    <string name="empty_widget_text_view">Empty Widget Text View</string>
    <string name="english_button">English Button</string>
    <string name="youtube_api_key">AIzaSyC4akYK9TEQUCYJPFcyOA8LK4pc3gigu9k</string>
    <string name="englishLang">en</string>
    <string name="playlist1">PLPr8ShFpxUzvt6pPxJ3TwJPwSeeEvh0L7</string>
    <string name="playlist2">PLPr8ShFpxUzvat3m3N7nNFujm8xQl7RNY</string>
    <string name="failed_to_initialize">Failed to Initialize!</string>
    <string name="parse_query">newsmeme</string>
    <string name="fetch_news_service">FetchNewsService</string>
    <string name="shared_pref">PREFERENCE</string>
    <string name="first_run_boolean">isFirstRun</string>
    <string name="youtube_id">youtube_id</string>
    <string name="created_At">createdAt</string>
    <string name="language">language</string>
    <string name="hindiLang">hi</string>
    <string name="youtube_embed_base_url">https://www.youtube.com/embed/</string>
    <string name="youtube_player_url_extension"><![CDATA[\?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=1]]></string>
    <string name="video_title">video_title</string>
    <string name="video_script">video_script</string>
    <string name="share_url">share_url</string>
    <string name="newsmeme_dot_in">" @newsmemedotin"</string>
    <string name="short_share_url">short_share_url</string>
    <string name="youtube_short_url">https://youtu.be/</string>
    <string name="narrator_nam">narrator_name</string>
    <string name="bot">Bot</string>
    <string name="title_intent_extra">titles</string>
    <string name="descs_intent_extra">descs</string>
    <string name="videoID_intent_extra">videoIds</string>
    <string name="idForSdk_intent_extra">idsForSDK</string>
    <string name="links_intent_extra">links</string>
    <string name="shareUrl_intent_extra">shareUrl</string>
    <string name="shortShareUrl_intent_extra">shortShareUrl</string>
    <string name="narrator_intent_extra">narrator</string>
    <string name="objectsID_parse">objectsID</string>
    <string name="fetched_data_offline">Fetched saved data</string>
    <string name="fetch_error_offline">Couldn\'t fetch saved data</string>
    <string name="no_network">No Network</string>
    <string name="news">news</string>
    <string name="subscribed_news">Subscribed to news topic</string>
    <string name="instance_token">"InstanceID token: "</string>
    <string name="text_intent_type">text/*</string>
    <string name="send_via">"Send via "</string>
    <string name="facebook_newsmeme">https://www.facebook.com/newsmemedotin</string>
    <string name="facebook_package_name">com.facebook.katana</string>
    <string name="facebook_url">fb://facewebmodal/f?href=</string>
    <string name="facebook_page_url">fb://page/</string>
    <string name="intent_text_plain_type">text/plain</string>
    <string name="gmail_package_end">.gm</string>
    <string name="gmail">gmail</string>
    <string name="twitter_package_string">twi</string>
    <string name="colon_space">": "</string>
    <string name="whatsapp_package_name">com.whatsapp</string>
    <string name="image_intent_type">image/*</string>
    <string name="screenMeme">screenMeme</string>
    <string name="external_storage_permission">android.permission.WRITE_EXTERNAL_STORAGE</string>
    <string name="facebook_package_orc">orc</string>
    <string name="facebook_app_share_kat">kat</string>
    <string name="narrator_sumaiya">Sumaiya</string>
    <string name="refreshed_token">"Refreshed token: "</string>
    <string name="image">image</string>
    <string name="new_video">New Video!</string>
    <string name="content">content</string>
    <string name="contentProviderAuthorities">ourContentProviderAuthorities</string>
    <string name="content_provider_base_URL">content://</string>
    <string name="news_Manager">newsManager</string>
    <string name="id">id</string>
    <string name="CREATE_TABLE">"CREATE TABLE "</string>
    <string name="parse_app_id">2wzSL2IYgy38Q378nNoKSJ23qqqSy5Uu1BW7Slax</string>
    <string name="parse_client_key">DceJGwZ5lMYnXMvtLHXkYjVlkDbx5YD6cpDNMG0k</string>
    <string name="link">link</string>
    <string name="title_">title</string>
    <string name="desc">desc</string>
    <string name="narrator_image">narratorImage</string>
    <string name="typeface_tisapro_location">fonts/TisaPro-Bold.otf</string>
    <string name="typeface_tisapro_regular_location">fonts/TisaPro-Regular.otf</string>

</resources>
