<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="in.newsmeme.MyMenuFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menufragmentimageview"
        android:scaleType="centerInside"
        android:src="@drawable/drawericon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/englishButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_weight=".5"
            android:textColor="#FFFFFF"
            android:background="@drawable/language_button"
            android:onClick="changeToEnglish"
            android:text="@string/english"
            android:contentDescription="@string/english_button"/>

        <Button
            android:id="@+id/hindiButton"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="#FFFFFF"
            android:layout_weight=".5"
            android:background="@drawable/language_button"
            android:onClick="changeToHindi"
            android:text="@string/hindi"
            android:contentDescription="@string/hindi_button"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/couch_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:onClick="couchView"
            android:contentDescription="@string/couch_view_button"
            android:text="@string/couch_view" />
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:onClick="subscribe"
            android:contentDescription="@string/subscribe_to_youtube_button"
            android:text="@string/subscribe_to_youtube" />
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/facebookPageLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:onClick="likeOnFacebook"
            android:contentDescription="@string/like_on_facebook_button"
            android:text="@string/like_on_facebook" />
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/shareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:onClick="shareLinkToApp"
            android:contentDescription="@string/share_app_button"
            android:text="@string/share_app" />
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/feedbackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:onClick="feedback"
            android:contentDescription="@string/feedback_button"
            android:text="@string/feedback_bhejo" />
    </com.balysv.materialripple.MaterialRippleLayout>
</LinearLayout>