<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryTesing"
    android:fitsSystemWindows="true"
    tools:context="in.newsmeme.Splash">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/splashscreenimageview"
            android:scaleType="fitCenter"
            android:src="@drawable/splash1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/newsmeme"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_40_sec_800kb_quality_journalism"
            android:textColor="#FFFFFF"
            android:textSize="19dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="40dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

    </LinearLayout>

</RelativeLayout>