<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:transliterator="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorPrimaryTesing"
                android:contentDescription="@string/offlineimageviewimage"
                android:scaleType="centerInside"
                android:src="@drawable/splash22" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:textSize="19dp"
                        android:textStyle="bold"
                        android:maxLines="3"
                        android:minLines="1"
                        android:contentDescription="@string/news_title"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/primary_text" />

                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:minLines="1"
                        android:maxLines="9"
                        android:textSize="17dp"
                        android:contentDescription="@string/news_content"/>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>